--- a/index.html
+++ b/index.html
@@ -152,11 +152,9 @@
                             </div>
                             <div class="col-lg-9">
                                 <h1 class="our_services_block_card_h1">
-
                                     Восстановление бухгалтерского учета
                                 </h1>
                                 <p class="our_services_block_card_p">
-
                                     Восстановление данных бухгалтерского и налогового учета, а также первичных учетных документов
                                 </p>
                             </div>
@@ -178,8 +176,7 @@
                                     Налоговый аудит
                                 </h1>
                                 <p class="our_services_block_card_p">
-
-                                    Проверка данных налоговой отчетности и реестров налогового учета на предмет корректности исчисления налогов
+                                    Проверка данных налоговой отчетности и реестров налогового учета на предмет корректности исчисления налогов.
                                 </p>
                             </div>
                         </div>
